# cuda_c_link

./: CMakeLists.txt  README.md  main.cpp  run_cmake.sh  script.sh  vector_add.cu  vector_add.h
